--- a/project1.css
+++ b/project1.css
@@ -18,8 +18,6 @@ h3 {
     font-family: sans-serif;
     font-size: 125%;
     font-weight: 700;
-    line-height: 29px;
-    letter-spacing: 0em;
     text-align: left;
 }
 
@@ -93,7 +91,7 @@ h2 {
     align-self: center;
 }
 
-#toggle_buttons {
+#toggle_button {
     width: 120px;
     height: 50px;
     border-radius: 10px;
@@ -102,7 +100,7 @@ h2 {
     margin-top: 40px;
 }
 
-.pokemon_name {
+#pokemon_name {
     width: 350px;
     height: 40px;
     border-radius: 10px;
@@ -114,5 +112,11 @@ h2 {
     text-align: center;
     justify-self: center;
     padding-top: 10px;
-    
+}
+
+#poke_image {
+    border-style: solid;
+    height: 350px;
+    width: 350px;
+    margin-bottom: 20px;
 }
