--- a/project1.css
+++ b/project1.css
@@ -1,3 +1,4 @@
+
 h1 {
     font-family: sans-serif;
     font-size: 300%;
@@ -10,8 +11,8 @@ h1 {
 .body {
     display: flex;
     flex-direction:row;
-    gap: 100px;
     justify-content: space-evenly;
+    margin-top: 15px;
 }
 
 h3 {
@@ -21,24 +22,36 @@ h3 {
     text-align: left;
 }
 
-.moves_panel {
+#moves_panel {
     width: 400px;
-    height: 500px;
+    height: 450px; 
     top: 223px;
     left: 838px;
     background: #E8E8E8;
+    overflow-y: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.stats_panel {
+
+#stats_panel {
     width: 400px;
-    height: 500px;
+    height: 450px;
     top: 223px;
     left: 838px;
     background: #E8E8E8;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.moves_div {
+#moves_div {
     display: none;
+    flex-direction: column;
+}
+
+#info_div {
+    display: flex;
+    flex-direction: column;
 }
 
 .right_half{
@@ -64,7 +77,7 @@ h3 {
     gap: 40px;
 }
 
-#info_move_button {
+#info_button, #move_button{
     width: 120px;
     height: 50px;
     top: 902px;
@@ -76,10 +89,6 @@ h3 {
     border: none;
 }
 
-.info_div {
-    float: right;
-}
-
 h2 {
     font-family: sans-serif;
     text-align: center;
@@ -89,15 +98,23 @@ h2 {
     display: flex;
     gap: 30px;
     align-self: center;
+    margin-top: -15px;
 }
 
-#toggle_button {
+#next_button, #back_button {
     width: 120px;
     height: 50px;
     border-radius: 10px;
     border: none;
     background: #E8E8E8;
     margin-top: 40px;
+    justify-content: center;
+}
+
+#back_button img,
+#next_button img {
+    width: 30px; 
+    height: 30px;
 }
 
 #pokemon_name {
@@ -119,4 +136,25 @@ h2 {
     height: 350px;
     width: 350px;
     margin-bottom: 20px;
+    margin-top: 15px;
 }
+
+ul li {
+    font-family: sans-serif;
+    font-size: 22px;
+    line-height: 30px;
+    font-weight: 400;
+    letter-spacing: 0em;
+    text-align: left;
+    list-style-type: none;
+}
+
+#types {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    font-size: 17px;
+    margin-top: -5px;
+    margin-left: -40px;
+}
+
